--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
     <div id="root"></div>
     <div id = "context"></div>
     <div id = "end"></div>
+    <div id="example"></div>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -40,3 +42,5 @@
     -->
   </body>
 </html>
+
+
